--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		<!-- /Topbar -->
 		<!-- Hero -->
 		<div class="kobe_section" id="home">
-			<div class="kobe_hero_wrap" data-img-url="img/hero/1.jpg">
+			<div class="kobe_hero_wrap" data-img-url="https://gitee.com/psdoc/guwubang-tts/raw/master/gwbweb/1.jpg">
 				<div class="overlay"></div>
 				<div class="container">
 					<div class="hero_texts" style="display: flex; justify-content: flex-start; align-items: center; transform: translateX(-50px);">
