--- a/manual.html
+++ b/manual.html
@@ -559,7 +559,7 @@
                                     <div class="carousel-container overflow-hidden rounded relative group" style="height: 242px; position: relative;">
                                         <span class="absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 text-white text-lg font-semibold opacity-0 group-hover:opacity-100 pointer-events-none transition-opacity duration-200 z-20 select-none" style="white-space:nowrap;">点击查看大图</span>
                                         <div class="absolute inset-0 transition bg-black/0 group-hover:bg-black/40 z-10 pointer-events-none"></div>
-                                        <img src="https://gitee.com/psdoc/guwubang-tts/raw/master/gwbweb/%E5%8F%A4%E7%89%A9%E4%BB%8B%E7%BB%8D.png" alt="古物介绍" class="carousel-image-artifacts absolute inset-0 w-full h-full object-contain transition-opacity duration-500" data-index="0">
+                                        <img src="img/卡牌介绍/古物介绍.png" alt="古物介绍" class="carousel-image-artifacts absolute inset-0 w-full h-full object-contain transition-opacity duration-500" data-index="0">
                                     </div>
                                 </div>
                             </div>
@@ -614,8 +614,8 @@
                             <section class="carousel-container overflow-hidden rounded relative group" style="height: 250px; position: relative;">
                                 <span class="absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 text-white text-lg font-semibold opacity-0 group-hover:opacity-100 pointer-events-none transition-opacity duration-200 z-20 select-none" style="white-space:nowrap;">点击查看大图</span>
                                 <span class="absolute inset-0 transition bg-black/0 group-hover:bg-black/40 z-10 pointer-events-none"></span>
-                                <img src="https://gitee.com/psdoc/guwubang-tts/raw/master/gwbweb/%E7%A7%AF%E5%88%86%E8%AE%A1%E7%AE%97%20-%201.png" alt="积分计算1" class="carousel-image-scoring absolute inset-0 w-full h-full object-contain transition-opacity duration-500" data-index="0">
-                                <img src="https://gitee.com/psdoc/guwubang-tts/raw/master/gwbweb/%E7%A7%AF%E5%88%86%E8%AE%A1%E7%AE%97%20-%201.png" alt="积分计算2" class="carousel-image-scoring absolute inset-0 w-full h-full object-contain transition-opacity duration-500 opacity-0" data-index="1">
+                                <img src="img/卡牌介绍/积分计算 - 1.png" alt="积分计算1" class="carousel-image-scoring absolute inset-0 w-full h-full object-contain transition-opacity duration-500" data-index="0">
+                                <img src="img/卡牌介绍/积分计算 - 2.png" alt="积分计算2" class="carousel-image-scoring absolute inset-0 w-full h-full object-contain transition-opacity duration-500 opacity-0" data-index="1">
                             </section>
                         </li>
                     </ol>
