--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		<!-- /Topbar -->
 		<!-- Hero -->
 		<div class="kobe_section" id="home">
-			<div class="kobe_hero_wrap" data-img-url="img/hero/1.jpg">
+			<div class="kobe_hero_wrap" data-img-url="img/hero/1.webp">
 				<div class="overlay"></div>
 				<div class="container">
 					<div class="hero_texts" style="display: flex; justify-content: flex-start; align-items: center; transform: translateX(-50px);">
@@ -105,7 +105,7 @@
 				--hero-section-margin-right: 0px;       /* Hero区右边距 */
 
 				/* logo上下左右边距（可自定义） */
-				--hero-logo-margin-top: -40%;          /* logo上边距 */
+				--hero-logo-margin-top: -50%;          /* logo上边距 */
 				--hero-logo-margin-bottom: 0px;        /* logo下边距 */
 				--hero-logo-margin-left: 5%;       /* logo左边距 */
 				--hero-logo-margin-right: 5%;          /* logo右边距 */
@@ -128,7 +128,7 @@
 				display: flex;
 				flex-direction: column;
 				align-items: flex-start;
-				width: 600px;
+				width: 500px;
 				max-width: 100%;
 				/* 向左偏移已在父级内联样式中设置 */
 			}
@@ -227,7 +227,7 @@
 						<div class="about_texts">
 							<ul class="about-texts-list">
 								<li>《古物帮》是一款多人竞分卡牌游戏，主打“牌型构建”。玩家作为古物帮成员，通过找回流失古物竞争帮主之位。最终博物馆根据古物数量、能力和排列顺序计算得分，决出帮主！</li>
-								<li>游戏包含职业牌、古物牌、工具牌等配件，共226张，融合丰富Roguelike元素，奖励与惩罚并存。</li>
+								<li>游戏包含角色牌、古物牌、工具牌等配件，共226张，融合丰富Roguelike元素，奖励与惩罚并存。</li>
 								<li>玩家需探索获取遗落古物，每个古物附带特殊能力，可干扰对手或强化自身，通过排序组合争取高分。</li>
 							</ul>
 						</div>
@@ -346,12 +346,12 @@
 						</div>
 						<div class="about_texts">
 							<ol class="about-texts-list" style="list-style-type: decimal; line-height: 2; margin-bottom: 0;">
-								<li style="margin-bottom: 18px;"><strong>游戏目标：</strong> 玩家通过收集、组合古物牌，利用职业与工具牌的能力，获得最高分数，成为最终帮主。</li>
+								<li style="margin-bottom: 18px;"><strong>游戏目标：</strong> 玩家通过收集、组合古物牌，利用角色与工具牌的能力，获得最高分数，成为最终帮主。</li>
 								<li style="margin-bottom: 18px;"><strong>准备阶段：</strong>
 									<ul style="margin-top: 10px; margin-bottom: 10px; line-height: 2;">
 										<li style="margin-bottom: 8px;">将所有古物牌、工具牌洗混后大致平均切成两份，分别组成市场牌堆和古墓牌堆。</li>
-										<li style="margin-bottom: 8px;">将市场牌堆，古墓牌堆，鉴定牌，政策牌，职业牌置于桌面中心。</li>
-										<li style="margin-bottom: 8px;">每位玩家选择/随机分配一张职业牌。</li>
+										<li style="margin-bottom: 8px;">将市场牌堆，古墓牌堆，鉴定牌，政策牌，角色牌置于桌面中心。</li>
+										<li style="margin-bottom: 8px;">每位玩家选择/随机分配一张角色牌。</li>
 										<li style="margin-bottom: 8px;">每人发6张起始手牌。</li>
 									</ul>
 								</li>
@@ -507,7 +507,7 @@
 					<div class="footer_inner" style="display: flex; justify-content: center; align-items: center; gap: 12px; flex-wrap: wrap; padding: 12px 0 4px 0; color: #fff; font-size: 15px;">
 						<span>古物帮©2025</span>
 						<span style="color: #888;">|</span>
-						<span>策划&设计：啊层</span>
+						<span>策划&设计：啊层（联系方式：2464823116@qq.com）</span>
 						<span style="color: #888;">|</span>
 						<span>美术&程序：psdoc烛光</span>
 					</div>
