--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
 							</ol>
 							<div class="manual-video-buttons" style="display: flex; gap: 20px; justify-content: center; margin-top: 32px;">
 								<a href="manual.html" class="manual-btn">查看详细说明书</a>
-								<a href="https://www.bilibili.com/video/BV1xxxxxxx" target="_blank" class="manual-btn">查看演示视频</a>
+								<a href="https://www.bilibili.com/video/BV1xngWzpELZ" target="_blank" class="manual-btn">查看演示视频</a>
 							</div>
 						</div>
 					</div>
